apps/integrations/home-assistant/endpoint-slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant
  namespace: home-assistant-webhook
  labels:
    kubernetes.io/service-name: home-assistant
addressType: IPv4
endpoints:
  - addresses: [10.0.0.2]
    conditions:
      ready: true
ports:
  - name: https
    appProtocol: https
    port: 443
    protocol: TCP
