apps/integrations/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant-webhook
  labels:
    app.kubernetes.io/name: home-assistant-webhook
spec:
  ports:
    - name: https
      appProtocol: https
      port: 443
      protocol: TCP
