apps/integrations/home-assistant/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-webhook
  namespace: home-assistant-webhook
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
  labels:
    app.kubernetes.io/name: home-assistant-webhook
    gateway.excloo.dev/public-access: "true"
spec:
  hostnames:
    - home-assistant.excloo.com
  parentRefs:
    - name: public-tunnel
      namespace: networking
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/webhook
      backendRefs:
        - name: home-assistant
          port: 443
